Bug 1307080 - Fixed unsigned/signed comparison. r=jorgk,aceman